loopwhile.LoopWhile.scala.error
Erreur de compilation :
LoopWhile:1: error: identifier expected but 'false' found.
while (estFaceMur():false) {
                    ^LoopWhile:5: error: ')' expected but '}' found.
	}
        ^